--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-[![Build Status](https://travis-ci.org/johnnyqian/ik-analyzer.svg?branch=master)](https://travis-ci.org/johnnyqian/ik-analyzer)
+[![travis-image]][travis-url]
 
 IKAnalyzer是一个开源的，基于java语言开发的轻量级的中文分词工具包。从2006年12月推出1.0版开始，IKAnalyzer已经推出了3个大版本。最初，它是以开源项目Luence为应用主体的，结合词典分词和文法分析算法的中文分词组件。新版本的 IKAnalyzer3.0则发展为面向Java的公用分词组件，独立于Lucene项目，同时提供了对Lucene的默认优化实现。 
 
@@ -30,3 +30,5 @@ Maven用法：
 要安装到本地Maven repository，使用如下命令，将自动编译，打包并安装：
 mvn install -Dmaven.test.skip=true
 
+[travis-image]: https://travis-ci.org/johnnyqian/ik-analyzer.svg?branch=master
+[travis-url]: https://travis-ci.org/johnnyqian/ik-analyzer "IKAnalyzer"
